added possiblility to run integration tests from IDE (#9)